Added category entity and all related changes.
* Added category entity and all related changes.

* Minor refactoring.